Fixed BB browswer wrapping nav-bar text

--- a/style.css
+++ b/style.css
@@ -245,6 +245,7 @@ table {
 	display: inline-block;
 	padding: 4px 10px;
 	text-decoration: none;
+	white-space: nowrap;
 }
 
 #navigation ul li a:hover {
